--- a/styles.css
+++ b/styles.css
@@ -3,8 +3,13 @@
 }
 
 body {
-    background-image: url(./euro.jpg);
-    background-size: cover;
+    background-image: 
+    linear-gradient(
+      rgba(0, 0, 0, 0.3),
+      rgba(0, 0, 0, 0.8)
+    ),
+    url(./Lisboa.jpg);
+    background-size: 100%;
     background-position: cover center;
     background-repeat: no-repeat;
     display: flex;
@@ -13,22 +18,28 @@ body {
     align-items: center;
     justify-content: center;
     margin: 0;
-    color: rgb(255, 255, 255);
+    color: rgb(250, 248, 248);
     font-family: 'poppins', sans-serif;
+    flex-wrap: wrap;
 }
 h1 {
     font-size: 4rem;
-    margin-top: rem;
+    margin-top: 10rem;
+    
 }
 
 .countdown-container {
     display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+
 }
 
 .big-text {
     font-size: 6rem;
     line-height: 1;
-    margin: 0 2rem;
+    margin: 1rem 2rem;
 }
 
 .countdown-el {
@@ -37,4 +48,31 @@ h1 {
 
 .countdown-el span{
     font-size: 1.5rem;
+}
+
+@media (max-width: 768px) {
+    body {
+        background-size: cover;
+        padding: 1rem;
+    }
+
+    h1 {
+        font-size: 2.5rem;
+        margin-top: 5rem;
+        text-align: center;
+    }
+
+    .big-text {
+        font-size: 3rem;
+        margin: 0.5rem 1rem;
+    }
+
+    .countdown-container {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .countdown-el span {
+        font-size: 1.2rem;
+    }
 }
